crates/monochange_integration_tests/tests/snapshots/hosted_release_commit__request-invalid-auth_stderr.snap
---
source: crates/monochange_integration_tests/tests/hosted_release_commit.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
error[config.invalid]: invalid hosted auth `password`; expected `auto`, `oidc`, or `token`
  command: monochange run request-invalid-auth
  step:    [2/2] open release request
  help:    Check `monochange.toml` and the command arguments, then rerun the command.
